Disable "text-overflow: ellipsis" which seems buggy with Chrome/Edge on justified paragraphs.

--- a/pychronia_common/static/MetalRadiance/metalradiance.css
+++ b/pychronia_common/static/MetalRadiance/metalradiance.css
@@ -774,7 +774,6 @@ body {
   word-break: normal;
   white-space: normal;
   quotes: none;
-  text-overflow: ellipsis;
 }
 .file_url_block {
   font-weight: bold;
@@ -1939,7 +1938,6 @@ h4 {
   word-break: normal;
   white-space: normal;
   quotes: none;
-  text-overflow: ellipsis;
 }
 em {
   font-style: italic;
