--- a/pychronia_common/static/MetalRadiance/scss/_top_level_structures.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_top_level_structures.scss
@@ -48,11 +48,12 @@ body {
     image-rendering: -moz-crisp-edges;
 
     /* useful and little known properties */
+    // TODE USE MIXIN
     word-spacing: normal; // or length measure
     word-wrap: break-word; // or normal
     word-break: normal; // or break-all/hyphenate
     white-space: normal; // or nowrap/pre/pre-line/pre-wrap
     quotes: none; // or string string string string
-    text-overflow: ellipsis; // or clip or string, not inherited
+    // NOPE buggy with justified content - text-overflow: ellipsis; // or clip or string, not inherited
 
 }
